# real2d

./: .gitignore  CMakeLists.txt  Makefile  imgui.ini  readme.md  vcpkg.json
include/: ECS.hpp  LevelLoader.hpp  MovementSystem.hpp  Store.hpp  TransformComponent.hpp  constants.hpp  game.hpp  imgui_impl_sdl.h  imgui_impl_sdlrenderer.h
scripts/: config.lua  level1.lua  level2.lua
src/: game.cpp  logger.cpp  main.cpp
src/components/: AnimationComponent.cpp  BoxColliderComponent.cpp  CameraFollowComponent.cpp  Component.cpp  HealthComponent.cpp  KeyboardControlComponent.cpp  MouseControlComponent.cpp  ProjectileComponent.cpp  ProjectileEmitterComponent.cpp  RigidBodyComponent.cpp  ScriptComponent.cpp  SprintComponent.cpp  SpriteComponent.cpp  TextComponent.cpp  TransformComponent.cpp
src/ecs/: Entity.cpp  Pool.cpp  Registry.cpp  System.cpp
src/event/: CollisionEvent.cpp  KeyPressedEvent.cpp  MouseClickedEvent.cpp
src/game/: Game.cpp  LevelLoader.cpp
src/lib/imgui/: imgui_impl_sdl.cpp  imgui_impl_sdlrenderer.cpp
src/lib/logger/: CMakeLists.txt  logger.cpp
src/lib/logger/include/: logger.hpp
src/lib/remap/: CMakeLists.txt  Remap.cpp
src/lib/remap/include/: Remap.hpp
src/store/: AssetStore.cpp
src/systems/: AnimationSystem.cpp  CameraMovementSystem.cpp  CollisionSystem.cpp  DamageSystem.cpp  KeyboardControlSystem.cpp  MouseControlSystem.cpp  MovementSystem.cpp  ProjectileEmitSystem.cpp  ProjectileLifecycleSystem.cpp  RenderColliderSystem.cpp  RenderGuiSystem.cpp  RenderHealthSystem.cpp  RenderSystem.cpp  RenderTextSystem.cpp  ScriptSystem.cpp
