cmake_minimum_required(VERSION 3.9)
project(real2d)
set(CMAKE_CXX_COMPILER "clang++")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -Wall")
find_package(SDL2 CONFIG REQUIRED)
find_package(sdl2-image CONFIG REQUIRED)
find_package(sdl2-ttf CONFIG REQUIRED)
find_package(sdl2-mixer CONFIG REQUIRED)
find_package(glm CONFIG REQUIRED)
find_package(Lua REQUIRED)
find_package(imgui CONFIG REQUIRED)
find_package(sol2 CONFIG REQUIRED)


add_executable(main src/main.cpp)
target_include_directories(main PRIVATE ${LUA_INCLUDE_DIR})
target_link_libraries(main PRIVATE SDL2::SDL2 SDL2::SDL2main SDL2::SDL2-static)
target_link_libraries(main PRIVATE SDL2::SDL2_image)
target_link_libraries(main PRIVATE SDL2::SDL2_ttf)
target_link_libraries(main PRIVATE SDL2::SDL2_mixer)
target_link_libraries(main PRIVATE glm::glm)
target_link_libraries(main PRIVATE imgui::imgui)
target_link_libraries(main PRIVATE ${LUA_LIBRARIES})
target_link_libraries(main PRIVATE sol2::sol2)

# set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
# find_package(SDL2_image REQUIRED)
# set(SDL2_INCLUDE_DIR /opt/homebrew/Cellar/sdl2/2.0.22/include)
# set(SDL2_LIBRARY /opt/homebrew/Cellar/sdl2/2.0.22/lib)
# include_directories(${LUA_INCLUDE_DIRS} ${SDL2_INCLUDE_DIRS}/.. ${SDL2_IMAGE_INCLUDE_DIRS}/..)
# find_library(SDL2_LIBRARY NAME SDL2)
# target_link_libraries(main ${LUA_LIBRARIES} ${SDL2_LIBRARIES}  ${SDL2_IMAGE_LIBRARIES})